cloud_infrastucture_devOps/cloudFormation_templates/corpweb.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Parameters:

  InstanceType:
    Description: "Webserver instance type."
    Type: "String"
    AllowedValues:
      - "t2.micro"
      - "t2.small"

Resources:
  EngineeringVpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock: "10.0.0.0/18"
      Tags:
        - Key: Environment
          Value: Class

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EngineeringVpc
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EngineeringVpc
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
  
  InternetGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: stack
        Value: class

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGW
      VpcId: !Ref EngineeringVpc

  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EngineeringVpc

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref PublicRT
      GatewayId: !Ref InternetGW
    DependsOn:
      - InternetGW
  
  PublicSubnet1RTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSubnet2

  EngineeringLbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref EngineeringVpc
      GroupDescription: "Allow access from HTTP traffic"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"

  WebserversSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref EngineeringVpc
      GroupDescription: "Allow access from HTTP traffic"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          SourceSecurityGroupId: !Ref EngineeringLbSG
          FromPort: "80"
          ToPort: "80"
  
  EngineeringLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: "idle_timeout.timeout_seconds"
          Value: "30"
      Name: !Join ["", [!Ref AWS::StackName, "-alb"]]
      Scheme: "internet-facing"
      SecurityGroups:
        - !Ref EngineeringLbSG
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: "Name"
          Value: "EngineeringLB"

  EngineeringLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref EngineeringWebserversTG
          Type: "forward"
      LoadBalancerArn: !Ref EngineeringLB
      Port: "80"
      Protocol: "HTTP"

  EngineeringWebserversTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: "/"
      HealthCheckProtocol: "HTTP"
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: "200,302"
      TargetType: "instance"
      Port: 80
      Protocol: "HTTP"
      TargetGroupAttributes:
        - Key: "deregistration_delay.timeout_seconds"
          Value: "30"
      Targets:
        - Id: !Ref Web1
          Port: "80"
        - Id: !Ref Web2
          Port: "80"
      VpcId: !Ref EngineeringVpc
  
  EngineeringInstanceProfile: 
    Type: AWS::IAM::InstanceProfile
    Properties: 
      Path: "/"
      Roles: 
        - SSMAccess

  Web1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: "ami-031a2e82d50ed8905"
      NetworkInterfaces: 
      - AssociatePublicIpAddress: "true"
        DeviceIndex: "0"
        SubnetId: !Ref PublicSubnet1
        GroupSet:
          - !Ref WebserversSG
      IamInstanceProfile: !Ref EngineeringInstanceProfile
      Tags:
        - Key: "Name"
          Value: "Web1"

  Web2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: "ami-034b1e5cba4ade574"
      NetworkInterfaces: 
      - AssociatePublicIpAddress: "true"
        DeviceIndex: "0"
        SubnetId: !Ref PublicSubnet2
        GroupSet:
          - !Ref WebserversSG
      IamInstanceProfile: !Ref EngineeringInstanceProfile
      Tags:
        - Key: "Name"
          Value: "Web2"
  
Outputs:
  WebUrl:
    Value: !GetAtt EngineeringLB.DNSName
    Description: "DNS Name"
